wip: refactor handler structure
