# api/api.yml
@@ -9,7 +9,7 @@ info:
     Typhoon is an event bridge for applications and services.
   license:
     name: Apache 2.0
-    url: 'https://www.apache.org/licenses/LICENSE-2.0.html'
+    url: "https://www.apache.org/licenses/LICENSE-2.0.html"
 
 servers:
   - url: http://localhost:8080/api/v1
@@ -31,8 +31,8 @@ consumes:
 produces:
   - "application/json"
 schemes:
-#- "https"
-- "http"
+  #- "https"
+  - "http"
 
 paths:
   /version:
@@ -42,7 +42,7 @@ paths:
       tags:
         - Server
       responses:
-        '200':
+        "200":
           content:
             application/json:
               schema:
@@ -51,30 +51,30 @@ paths:
   /teams:
     get:
       summary: List all teams
-      operationId: listTeam
+      operationId: listTeams
       tags:
         - Team
       produces:
-        - 'application/json'
+        - "application/json"
       parameters:
-        - $ref: '#/components/parameters/offsetParam'
-        - $ref: '#/components/parameters/limitParam'
+        - $ref: "#/components/parameters/offsetParam"
+        - $ref: "#/components/parameters/limitParam"
       security:
-        - bearerAuth: ['read:teams']
+        - bearerAuth: ["read:teams"]
       responses:
-        '200':
+        "200":
           description: Successfull response
           content:
             application/json:
               schema:
                 allOf:
-                  - $ref: '#/components/schemas/PaginatedResult'
+                  - $ref: "#/components/schemas/PaginatedResult"
                   - type: object
                     properties:
                       results:
                         type: array
                         items:
-                          $ref: '#/components/schemas/Team'
+                          $ref: "#/components/schemas/Team"
 
     post:
       summary: Creates a new team
@@ -84,9 +84,9 @@ paths:
       produces:
         - "application/json"
       requestBody:
-        $ref: '#/components/requestBodies/CreateTeam'
+        $ref: "#/components/requestBodies/CreateTeam"
       responses:
-        '201':
+        "201":
           description: Created
           content:
             application/json:
@@ -96,12 +96,55 @@ paths:
         GetTeamById:
           operationId: getTeam
           parameters:
-            teamId: '$response.body#/id'
+            teamId: "$response.body#/id"
 
-  /team/{teamId}:
+  /teams/{teamId}:
     get:
       summary: Gets a team by ID
-      operation: getTeam
+      operationId: getTeam
+      parameters:
+        - $ref: "#/components/parameters/teamId"
+      responses:
+        "200":
+          description: Successful
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Team"
+
+  /teams/{teamId}/accounts:
+    get:
+      summary: List all accounts for a team
+      operationId: listAccounts
+      tags:
+        - Team
+      produces:
+        - "application/json"
+      parameters:
+        - $ref: "#/components/parameters/teamId"
+        - $ref: "#/components/parameters/offsetParam"
+        - $ref: "#/components/parameters/limitParam"
+      security:
+        - bearerAuth: ["read:accounts"]
+      responses:
+        "200":
+          description: Successfull response
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/PaginatedResult"
+                  - type: object
+                    properties:
+                      results:
+                        type: array
+                        items:
+                          $ref: "#/components/schemas/Account"
+
+  /teams/{teamId}/accounts/{accountId}:
+    get:
+      summary: Gets an account by ID
+      operationId: getAccount
       parameters:
         - in: path
           name: teamId
@@ -109,13 +152,20 @@ paths:
           schema:
             type: string
             format: uuid
+        - in: path
+          name: accountId
+          required: true
+          schema:
+            type: string
+            format: uuid
       responses:
-        '200':
+        "200":
           description: Successful
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Team"
+                $ref: "#/components/schemas/Account"
+
   /systems:
     get:
       summary: List all managed systems.
@@ -125,7 +175,7 @@ paths:
       description: |-
         Returns a list of managed systems.
       responses:
-        '200':
+        "200":
           description: A paginated response of all systems
           content:
             application/json:
@@ -148,7 +198,7 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: A paginated response of all systems
 
 definitions:
@@ -163,6 +213,14 @@ definitions:
 
 components:
   parameters:
+    teamId:
+      in: path
+      name: teamId
+      required: true
+      schema:
+        type: string
+        format: uuid
+      description: The id of the team to retrieve.
     offsetParam:
       in: query
       name: offset
@@ -188,7 +246,7 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/Team'
+            $ref: "#/components/schemas/Team"
 
   securitySchemes:
     cookieAuth:
@@ -252,7 +310,6 @@ components:
           description: Creation date and time
           example: "2021-01-30T08:30:00Z"
 
-
     Team:
       type: object
       required:
@@ -286,6 +343,38 @@ components:
           description: Creation date and time
           example: "2021-01-30T08:30:00Z"
 
+    Account:
+      type: object
+      required:
+        - name
+      properties:
+        id:
+          type: string
+          format: uuid
+          readOnly: true
+          x-oapi-codegen-extra-tags:
+            gorm: "type:uuid;default:gen_random_uuid()"
+        name:
+          type: string
+        description:
+          type: string
+        contactEmail:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+          description: Creation date and time
+          example: "2021-01-30T08:30:00Z"
+        updatedAt:
+          type: string
+          format: date-time
+          description: Creation date and time
+          example: "2021-01-30T08:30:00Z"
+        deletedAt:
+          type: string
+          format: date-time
+          description: Creation date and time
+          example: "2021-01-30T08:30:00Z"
 
     Version:
       type: object
